--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
     "time-grunt": "~0.1.1",
-    "grunt-usereplace": "~0.1.4"
+    "grunt-usereplace": "~0.1.4",
+    "grunt-manifest": "~0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
