--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
   # deploy the site
   - provider: pages
     repo: mysterycommand/intergalacticfantastic
-    target_branch: master
+    target_branch: gh-pages
     github_token: $GH_TOKEN
     allow_empty_commit: true
     skip_cleanup: true
